[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotifydailymix"
version = "0.1.0"
description = "Custom Daily Mix playlist generator for Spotify"
authors = [{name = "Adrian Carnate"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "spotipy>=2.23.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/aadriancar/spotifydailymix"
"Repository" = "https://github.com/aadriancar/spotifydailymix"

[project.scripts]
dailymix = "spotifydm.main:main"
dmsetup = "spotifydm.setup:create_env_file"